// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Box Backgrounds 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <div
      className="Box-s1k20wdx-0 jrfhHe"
    >
      With 
      <code>
        background="primary"
      </code>
    </div>
    <div
      className="Box-s1k20wdx-0 joAhoS"
    >
      With 
      <code>
        background="secondary"
      </code>
    </div>
    <div
      className="Box-s1k20wdx-0 ykQqZ"
    >
      With 
      <code>
        background="success"
      </code>
    </div>
    <div
      className="Box-s1k20wdx-0 ewuwxB"
    >
      With 
      <code>
        background="danger"
      </code>
    </div>
    <div
      className="Box-s1k20wdx-0 dPWVib"
    >
      With 
      <code>
        background="muted"
      </code>
    </div>
  </div>
</div>
`;

exports[`Storyshots Box Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Box-s1k20wdx-0 jTUUIc"
  >
    <div
      className="Box-s1k20wdx-0 jTUUIc"
    >
      Basic example
    </div>
    <div
      className="Box-s1k20wdx-0 hHhPMz"
    >
      With 
      <code>
        gutterX="base" gutterY="smallest"
      </code>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <div
      className="ButtonPanel-ovkzl-0 ejpSHT"
    >
      <button
        className="Button-s1srdffo-0 hUxorT"
        type="button"
      >
        Default
      </button>
      <button
        className="Button-s1srdffo-0 cLgDaV"
        type="button"
      >
        Primary
      </button>
      <button
        className="Button-s1srdffo-0 gVkBJZ"
        type="button"
      >
        Secondary
      </button>
      <button
        className="Button-s1srdffo-0 jJQubz"
        type="button"
      >
        Success
      </button>
      <button
        className="Button-s1srdffo-0 cWgVmd"
        type="button"
      >
        Danger
      </button>
      <button
        className="Button-s1srdffo-0 eYQfim"
        type="button"
      >
        Light
      </button>
      <button
        className="Button-s1srdffo-0 hqSpOF"
        type="button"
      >
        Dark
      </button>
      <button
        className="Button-s1srdffo-0 hFNdAJ"
        type="button"
      >
        Link
      </button>
    </div>
    <p
      className="Paragraph-s1qmbsem-0 hiwcSy"
      spacing="smallest"
    >
      Set "Stage background" to dark knob to see light variations
    </p>
  </div>
</div>
`;

exports[`Storyshots Button Block-level 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <div
      className="ButtonPanel-ovkzl-0 ejpSHT"
    >
      <button
        className="Button-s1srdffo-0 fKKYbd"
        type="button"
      >
        Default
      </button>
      <button
        className="Button-s1srdffo-0 gsTopv"
        type="button"
      >
        Primary
      </button>
      <button
        className="Button-s1srdffo-0 lyhkl"
        type="button"
      >
        Secondary
      </button>
      <button
        className="Button-s1srdffo-0 csdKDi"
        type="button"
      >
        Success
      </button>
      <button
        className="Button-s1srdffo-0 dHNYyx"
        type="button"
      >
        Danger
      </button>
      <button
        className="Button-s1srdffo-0 emXGXy"
        type="button"
      >
        Light
      </button>
      <button
        className="Button-s1srdffo-0 jwUWVU"
        type="button"
      >
        Dark
      </button>
      <button
        className="Button-s1srdffo-0 dcTAcy"
        type="button"
      >
        Link
      </button>
    </div>
    <p
      className="Paragraph-s1qmbsem-0 hiwcSy"
      spacing="smallest"
    >
      Set "Stage background" to dark knob to see light variations
    </p>
  </div>
</div>
`;

exports[`Storyshots Button Disabled 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <div
      className="ButtonPanel-ovkzl-0 ejpSHT"
    >
      <button
        className="Button-s1srdffo-0 hUxorT"
        disabled={true}
        type="button"
      >
        Default
      </button>
      <button
        className="Button-s1srdffo-0 cLgDaV"
        disabled={true}
        type="button"
      >
        Primary
      </button>
      <button
        className="Button-s1srdffo-0 gVkBJZ"
        disabled={true}
        type="button"
      >
        Secondary
      </button>
      <button
        className="Button-s1srdffo-0 jJQubz"
        disabled={true}
        type="button"
      >
        Success
      </button>
      <button
        className="Button-s1srdffo-0 cWgVmd"
        disabled={true}
        type="button"
      >
        Danger
      </button>
      <button
        className="Button-s1srdffo-0 eYQfim"
        disabled={true}
        type="button"
      >
        Light
      </button>
      <button
        className="Button-s1srdffo-0 hqSpOF"
        disabled={true}
        type="button"
      >
        Dark
      </button>
      <button
        className="Button-s1srdffo-0 hFNdAJ"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Link
      </button>
    </div>
    <p
      className="Paragraph-s1qmbsem-0 hiwcSy"
      spacing="smallest"
    >
      Set "Stage background" to dark knob to see light variations
    </p>
  </div>
</div>
`;

exports[`Storyshots ButtonPanel Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="ButtonPanel-ovkzl-0 hQjWpQ"
  >
    <button
      className="Button-s1srdffo-0 hUxorT"
      type="button"
    >
      Default
    </button>
    <button
      className="Button-s1srdffo-0 cLgDaV"
      type="button"
    >
      Primary
    </button>
    <button
      className="Button-s1srdffo-0 gVkBJZ"
      type="button"
    >
      Secondary
    </button>
    <button
      className="Button-s1srdffo-0 jJQubz"
      type="button"
    >
      Success
    </button>
    <button
      className="Button-s1srdffo-0 cWgVmd"
      type="button"
    >
      Danger
    </button>
    <button
      className="Button-s1srdffo-0 hFNdAJ"
      type="button"
    >
      Link
    </button>
  </div>
</div>
`;

exports[`Storyshots Callout Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <div
      className="Callout-mttm4f-0 ZhdNC"
    >
      <h2
        className="Heading__Heading2-s1dfzcz4-1 kizYdH"
      >
        Callout - Primary style
      </h2>
      <p
        className="Paragraph-s1qmbsem-0 hiwcSy"
        spacing="smallest"
      >
        This is some example content
      </p>
      <p
        className="Paragraph-s1qmbsem-0 dGiWwC"
        spacing="smallest"
      >
        It draws some attention to it relative to surrounding content
      </p>
    </div>
    <div
      className="Callout-mttm4f-0 hKbcnT"
    >
      <h2
        className="Heading__Heading2-s1dfzcz4-1 kizYdH"
      >
        Callout - Primary style
      </h2>
      <p
        className="Paragraph-s1qmbsem-0 hiwcSy"
        spacing="smallest"
      >
        This is some example content
      </p>
      <p
        className="Paragraph-s1qmbsem-0 dGiWwC"
        spacing="smallest"
      >
        It draws some attention to it relative to surrounding content
      </p>
    </div>
    <div
      className="Callout-mttm4f-0 WuoUl"
    >
      <h2
        className="Heading__Heading2-s1dfzcz4-1 kizYdH"
      >
        Callout - Danger style
      </h2>
      <p
        className="Paragraph-s1qmbsem-0 hiwcSy"
        spacing="smallest"
      >
        This is some example content
      </p>
      <p
        className="Paragraph-s1qmbsem-0 dGiWwC"
        spacing="smallest"
      >
        It draws some attention to it relative to surrounding content
      </p>
    </div>
    <div
      className="Callout-mttm4f-0 dHRhPe"
    >
      <h2
        className="Heading__Heading2-s1dfzcz4-1 kizYdH"
      >
        Callout - Success style
      </h2>
      <p
        className="Paragraph-s1qmbsem-0 hiwcSy"
        spacing="smallest"
      >
        This is some example content
      </p>
      <p
        className="Paragraph-s1qmbsem-0 dGiWwC"
        spacing="smallest"
      >
        It draws some attention to it relative to surrounding content
      </p>
    </div>
    <div
      className="Callout-mttm4f-0 bqAedm"
    >
      <h2
        className="Heading__Heading2-s1dfzcz4-1 kizYdH"
      >
        Callout - Dark style
      </h2>
      <p
        className="Paragraph-s1qmbsem-0 hiwcSy"
        spacing="smallest"
      >
        This is some example content
      </p>
      <p
        className="Paragraph-s1qmbsem-0 dGiWwC"
        spacing="smallest"
      >
        It draws some attention to it relative to surrounding content
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Container Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <div
      className="Container-s1kk78uv-0 GCnsz"
    >
      Hello Container 1
    </div>
    <div
      className="Container-s1kk78uv-0 GCnsz"
    >
      Hello Container 2
    </div>
    <div
      className="Container-s1kk78uv-0 loswEv"
    >
      This container has custom max widths for different screen size. Try resizing the browser window!
    </div>
  </div>
</div>
`;

exports[`Storyshots Error Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <p
    className="Error-s1vyvhq8-0 kcaAmM"
  >
    Basic example
  </p>
</div>
`;

exports[`Storyshots Examples Form Validation 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Readable-s106xs6s-0 GWqSM"
  >
    <form
      className="Form-s152rqk0-0 jCBAIU"
      onSubmit={[Function]}
    >
      <fieldset
        className="Box-s1k20wdx-0-fieldset fSSFtb"
      >
        <div
          className="Flex-s1lmmxu5-1 dNIKNy"
        >
          <div
            className="Flex__Item-s1lmmxu5-0 jFTHiw"
          >
            <legend
              className="s1dfzcz4-3-legend-Heading__Heading4-brhaBC fHONcX"
            >
              Personal information
            </legend>
          </div>
        </div>
        <div
          className="Flex-s1lmmxu5-1 dNIKNy"
        >
          <div
            className="Flex__Item-s1lmmxu5-0 cmVgdI"
          >
            <div
              className="Field-w8gztl-0 jNJaXY"
            >
              <label
                className="Label-s13jfhe8-0 cVjxDI"
                htmlFor="givenNames"
              >
                Given names
              </label>
              <input
                aria-describedby="givenNamesErrors"
                className="Input-s1j0sozl-0 kXoTHM"
                id="givenNames"
                name="givenNames"
                onChange={[Function]}
                value=""
              />
            </div>
          </div>
          <div
            className="Flex__Item-s1lmmxu5-0 cmVgdI"
          >
            <div
              className="Field-w8gztl-0 jNJaXY"
            >
              <label
                className="Label-s13jfhe8-0 cVjxDI"
                htmlFor="lastName"
              >
                Last name
              </label>
              <input
                aria-describedby="lastNameErrors"
                className="Input-s1j0sozl-0 kXoTHM"
                id="lastName"
                name="lastName"
                onChange={[Function]}
                value=""
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        className="Box-s1k20wdx-0-fieldset fSSFtb"
      >
        <div
          className="Flex-s1lmmxu5-1 dNIKNy"
        >
          <div
            className="Flex__Item-s1lmmxu5-0 jFTHiw"
          >
            <legend
              className="s1dfzcz4-3-legend-Heading__Heading4-brhaBC fHONcX"
            >
              Billing address
            </legend>
          </div>
        </div>
        <div
          className="Field-w8gztl-0 hBSmPd"
          spacing="smaller"
        >
          <label
            className="Label-s13jfhe8-0 cVjxDI"
            htmlFor="addressLine1"
          >
            Street address
          </label>
          <input
            aria-describedby="addressLine1Errors"
            className="Input-s1j0sozl-0 kXoTHM"
            id="addressLine1"
            name="addressLine1"
            onChange={[Function]}
            value=""
          />
        </div>
        <div
          className="Field-w8gztl-0 dOdphz"
        >
          <input
            aria-describedby="addressLine2Errors"
            className="Input-s1j0sozl-0 kXoTHM"
            id="addressLine2"
            name="addressLine2"
            onChange={[Function]}
            value=""
          />
        </div>
        <div
          className="Flex-s1lmmxu5-1 dNIKNy"
        >
          <div
            className="Flex__Item-s1lmmxu5-0 cmVgdI"
          >
            <div
              className="Field-w8gztl-0 dOdphz"
            >
              <label
                className="Label-s13jfhe8-0 cVjxDI"
                htmlFor="city"
              >
                Town or city
              </label>
              <input
                aria-describedby="cityErrors"
                className="Input-s1j0sozl-0 kXoTHM"
                id="city"
                name="city"
                onChange={[Function]}
                value=""
              />
            </div>
          </div>
          <div
            className="Flex__Item-s1lmmxu5-0 jFTHiw"
          >
            <div
              className="Field-w8gztl-0 dOdphz"
            >
              <label
                className="Label-s13jfhe8-0 cVjxDI"
                htmlFor="postCode"
              >
                Postcode
              </label>
              <input
                aria-describedby="postCodeErrors"
                className="Input-s1j0sozl-0 kXoTHM"
                id="postCode"
                name="postCode"
                onChange={[Function]}
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="Field-w8gztl-0 jNJaXY"
        >
          <label
            className="Label-s13jfhe8-0 cVjxDI"
            htmlFor="country"
          >
            Country
          </label>
          <input
            aria-describedby="countryErrors"
            className="Input-s1j0sozl-0 kXoTHM"
            id="country"
            name="country"
            onChange={[Function]}
            value=""
          />
        </div>
      </fieldset>
      <div
        className="Field-w8gztl-0 dOdphz"
      >
        <div
          className="Switch__Container-s12shb1n-3 erjjhL"
        >
          <input
            aria-describedby="marketingErrors"
            checked={true}
            className="Switch__Control-s12shb1n-2 UqEMw"
            name="marketing"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="Switch__Label-s12shb1n-1 MBuRg"
          >
            <div
              className="Switch__Status-s12shb1n-0 lmYiEf"
            />
            <div
              className="Switch__Content-s12shb1n-4 cQtReC"
            >
              Would you like to receive occasional emails with offers and product announcements?
            </div>
          </label>
        </div>
      </div>
      <div
        className="ButtonPanel-ovkzl-0 jOmgch"
      >
        <button
          className="Button-s1srdffo-0 hFNdAJ"
          onClick={[Function]}
          type="button"
        >
          Reset
        </button>
        <button
          className="Button-s1srdffo-0 cLgDaV"
          disabled={false}
          onClick={[Function]}
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Examples Using with downshift 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Readable-s106xs6s-0 GWqSM"
    onClick={[Function]}
  >
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      autoComplete="off"
      className="s1j0sozl-0-Input-eXLwAq gakcYW"
      id="downshift-input-2"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Favorite color?"
      role="combobox"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots Field Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Readable-s106xs6s-0 GWqSM"
  >
    <div
      className="Field-w8gztl-0 rOvtQ"
    >
      <div>
        <label
          className="Label-s13jfhe8-0 cVjxDI"
        >
          Street
        </label>
        <span
          className="Text-s14udbl0-0 kSJujU"
          color="muted"
        >
          Must be a U.S. address
        </span>
      </div>
      <input
        className="Input-s1j0sozl-0 kXoTHM"
        defaultValue="742 Evergreen Terrace"
      />
      <input
        className="Input-s1j0sozl-0 kXoTHM"
        defaultValue=""
      />
      <p
        className="Error-s1vyvhq8-0 kcaAmM"
      >
        This is not a valid address
      </p>
    </div>
    <div
      className="Field-w8gztl-0 brSsWP"
    >
      <label
        className="Label-s13jfhe8-0 cVjxDI"
      >
        Town or suburb
      </label>
      <input
        className="Input-s1j0sozl-0 kXoTHM"
        defaultValue="Springfield"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots FieldSet Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <fieldset
    className="Box-s1k20wdx-0-fieldset fSSFtb"
  >
    Basic example
  </fieldset>
</div>
`;

exports[`Storyshots Flex Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Readable-s106xs6s-0 GWqSM"
  >
    <div
      className="Flex-s1lmmxu5-1 dQsyUb"
      direction="row"
      wrap="wrap"
    >
      <div
        className="Flex__Item-s1lmmxu5-0 jFTHiw"
      >
        <p
          className="Paragraph-s1qmbsem-0 hiwcSy"
          spacing="smallest"
        >
          First example
          <br />
          Has two lines
        </p>
      </div>
      <div
        className="Flex__Item-s1lmmxu5-0 jFTHiw"
      >
        <p
          className="Paragraph-s1qmbsem-0 hiwcSy"
          spacing="smallest"
        >
          Second example
        </p>
      </div>
      <div
        className="Flex__Item-s1lmmxu5-0 jFTHiw"
      >
        <p
          className="Paragraph-s1qmbsem-0 hiwcSy"
          spacing="smallest"
        >
          Third example
        </p>
      </div>
      <div
        className="Flex__Item-s1lmmxu5-0 hffWbS"
        order={-1}
      >
        <p
          className="Paragraph-s1qmbsem-0 hiwcSy"
          spacing="smallest"
        >
          Fourth example
        </p>
      </div>
      <div
        className="Flex__Item-s1lmmxu5-0 cmVgdI"
      >
        <p
          className="Paragraph-s1qmbsem-0 hiwcSy"
          spacing="smallest"
        >
          Fifth example
        </p>
      </div>
      <div
        className="Flex__Item-s1lmmxu5-0 jFTHiw"
      >
        <p
          className="Paragraph-s1qmbsem-0 hiwcSy"
          spacing="smallest"
        >
          Sixth example
        </p>
      </div>
      <div
        className="Flex__Item-s1lmmxu5-0 jFTHiw"
      >
        <p
          className="Paragraph-s1qmbsem-0 hiwcSy"
          spacing="smallest"
        >
          Seventh example
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Form Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <form
    className="Form-s152rqk0-0 jCBAIU"
  >
    Basic example
  </form>
</div>
`;

exports[`Storyshots Heading Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <h1
      className="Heading__Heading1-s1dfzcz4-0 gpmoUp"
    >
      The quick brown fox jumps over the lazy dog
    </h1>
    <h2
      className="Heading__Heading2-s1dfzcz4-1 kizYdH"
    >
      The quick brown fox jumps over the lazy dog
    </h2>
    <h3
      className="Heading__Heading3-s1dfzcz4-2 dNQuKf"
    >
      The quick brown fox jumps over the lazy dog
    </h3>
    <h4
      className="Heading__Heading4-s1dfzcz4-3 cMUzaM"
    >
      The quick brown fox jumps over the lazy dog
    </h4>
    <h5
      className="Heading__Heading5-s1dfzcz4-4 fLokKf"
    >
      The quick brown fox jumps over the lazy dog
    </h5>
    <h6
      className="Heading__Heading6-s1dfzcz4-5 fhvBsk"
    >
      The quick brown fox jumps over the lazy dog
    </h6>
  </div>
</div>
`;

exports[`Storyshots Input Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <input
    className="Input-s1j0sozl-0 kXoTHM"
  />
</div>
`;

exports[`Storyshots Input Disabled 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <input
    className="Input-s1j0sozl-0 hkqqXQ"
    disabled={true}
    value="cannot edit me!"
  />
</div>
`;

exports[`Storyshots Input Inline 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Flex-s1lmmxu5-1 dNIKNy"
  >
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <input
        className="Input-s1j0sozl-0 exdyCQ"
      />
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <input
        className="Input-s1j0sozl-0 exdyCQ"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Validation 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Flex-s1lmmxu5-1 iQmqfD"
    direction="column"
  >
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <input
        className="Input-s1j0sozl-0 jRZpZk"
        defaultValue="I am valid"
      />
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <input
        className="Input-s1j0sozl-0 bfuwXq"
        defaultValue="I am invalid"
      />
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <input
        className="Input-s1j0sozl-0 kaKCt"
        defaultValue="I am disabled. Validation not shown."
        disabled={true}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <label
    className="Label-s13jfhe8-0 cVjxDI"
  >
    Basic example
  </label>
</div>
`;

exports[`Storyshots Legend Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <legend
    className="s1dfzcz4-3-legend-Heading__Heading4-brhaBC fHONcX"
  >
    Basic example
  </legend>
</div>
`;

exports[`Storyshots Link Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Flex-s1lmmxu5-1 lhfiLN"
  >
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <a
        className="Link-s1mfj9j3-0 fcljDw"
        href="#"
      >
        No appearance
      </a>
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <a
        className="Link-s1mfj9j3-0 fBeUOM"
        href="#"
      >
        Default
      </a>
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <a
        className="Link-s1mfj9j3-0 cHzbQE"
        href="#"
      >
        Primary
      </a>
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <a
        className="Link-s1mfj9j3-0 bfMrYA"
        href="#"
      >
        Secondary
      </a>
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <a
        className="Link-s1mfj9j3-0 iEeHxe"
        href="#"
      >
        Success
      </a>
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <a
        className="Link-s1mfj9j3-0 fDzeWY"
        href="#"
      >
        Danger
      </a>
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <a
        className="Link-s1mfj9j3-0 hUwACL"
        href="#"
      >
        Light
      </a>
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <a
        className="Link-s1mfj9j3-0 enafBc"
        href="#"
      >
        Dark
      </a>
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <a
        className="Link-s1mfj9j3-0 fNFxrh"
        href="#"
      >
        Link
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Link Block-level 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Flex-s1lmmxu5-1 iQmqfD"
    direction="column"
  >
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <a
        className="Link-s1mfj9j3-0 BqjIt"
        href="#"
      >
        No appearance
      </a>
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <a
        className="Link-s1mfj9j3-0 kuvIka"
        href="#"
      >
        Default
      </a>
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <a
        className="Link-s1mfj9j3-0 gguRWB"
        href="#"
      >
        Primary
      </a>
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <a
        className="Link-s1mfj9j3-0 dksWnv"
        href="#"
      >
        Secondary
      </a>
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <a
        className="Link-s1mfj9j3-0 hCkinq"
        href="#"
      >
        Success
      </a>
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <a
        className="Link-s1mfj9j3-0 kULvTI"
        href="#"
      >
        Danger
      </a>
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <a
        className="Link-s1mfj9j3-0 IbGR"
        href="#"
      >
        Light
      </a>
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <a
        className="Link-s1mfj9j3-0 ckaRKj"
        href="#"
      >
        Dark
      </a>
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <a
        className="Link-s1mfj9j3-0 kNhoJw"
        href="#"
      >
        Link
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Paragraph Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <p
      className="Paragraph-s1qmbsem-0 hiwcSy"
      spacing="smallest"
    >
      This is sample text in a paragraph
    </p>
    <p
      className="Paragraph-s1qmbsem-0 dGiWwC"
      spacing="smallest"
    >
      This is a flush paragraph that has no margin
    </p>
    <p
      className="Paragraph-s1qmbsem-0 hiwcSy"
      spacing="smallest"
    >
      This is another paragraph
    </p>
  </div>
</div>
`;

exports[`Storyshots ProgressBar Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={42}
      className="ProgressBar-cxqey5-0 FapRJ"
      max={100}
      min={0}
      role="progressbar"
      value={42}
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={42}
      className="ProgressBar-cxqey5-0 heVjpj"
      max={100}
      min={0}
      role="progressbar"
      value={42}
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={42}
      className="ProgressBar-cxqey5-0 dXrtOQ"
      max={100}
      min={0}
      role="progressbar"
      value={42}
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={42}
      className="ProgressBar-cxqey5-0 hsayfM"
      max={100}
      min={0}
      role="progressbar"
      value={42}
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={42}
      className="ProgressBar-cxqey5-0 hCygmx"
      max={100}
      min={0}
      role="progressbar"
      value={42}
    />
  </div>
</div>
`;

exports[`Storyshots Readable Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Readable-s106xs6s-0 GWqSM"
  >
    Readable has its width limited for readability on larger screens. On smaller screens, it reverts to take up 100% width. Try resizing your window to see the effect.
  </div>
</div>
`;

exports[`Storyshots Select Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Select__Container-h7v5lq-0 bFAjwz"
    disabled={undefined}
  >
    <select
      className="Select__Control-h7v5lq-3 jlQFOG"
    >
      <option
        value=""
      >
        Select your favourite super hero
      </option>
      <option
        value="wonder-woman"
      >
        Wonder woman
      </option>
      <option
        value="batman"
      >
        Batman
      </option>
      <option
        value="superman"
      >
        Superman
      </option>
      <option
        value="iron-man"
      >
        Iron man
      </option>
    </select>
    <div
      className="Select__Accessory-h7v5lq-1 eThkKw"
    >
      <svg
        className="Select__Chevron-h7v5lq-2 eVUACE"
        fill="none"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="3"
        viewBox="0 0 24 24"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Disabled 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Select__Container-h7v5lq-0 jFjDFy"
    disabled={true}
  >
    <select
      className="Select__Control-h7v5lq-3 jlQFOG"
      disabled={true}
    >
      <option
        value=""
      >
        You can't open me!
      </option>
      <option
        value="wonder-woman"
      >
        Wonder woman
      </option>
      <option
        value="batman"
      >
        Batman
      </option>
      <option
        value="superman"
      >
        Superman
      </option>
      <option
        value="iron-man"
      >
        Iron man
      </option>
    </select>
    <div
      className="Select__Accessory-h7v5lq-1 eThkKw"
    >
      <svg
        className="Select__Chevron-h7v5lq-2 eVUACE"
        fill="none"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="3"
        viewBox="0 0 24 24"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Inline 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <div
      className="Flex-s1lmmxu5-1 exxaEd"
      wrap="wrap"
    >
      <div
        className="Flex__Item-s1lmmxu5-0 jFTHiw"
      >
        <div
          className="Select__Container-h7v5lq-0 eeTVMk"
          disabled={undefined}
        >
          <select
            className="Select__Control-h7v5lq-3 ihyrjY"
          >
            <option
              value=""
            >
              Select your favourite super hero
            </option>
            <option
              value="wonder-woman"
            >
              Wonder woman
            </option>
            <option
              value="batman"
            >
              Batman
            </option>
            <option
              value="superman"
            >
              Superman
            </option>
            <option
              value="iron-man"
            >
              Iron man
            </option>
          </select>
          <div
            className="Select__Accessory-h7v5lq-1 eThkKw"
          >
            <svg
              className="Select__Chevron-h7v5lq-2 eVUACE"
              fill="none"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="3"
              viewBox="0 0 24 24"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Flex__Item-s1lmmxu5-0 jFTHiw"
      >
        <div
          className="Select__Container-h7v5lq-0 eeTVMk"
          disabled={undefined}
        >
          <select
            className="Select__Control-h7v5lq-3 ihyrjY"
          >
            <option
              value=""
            >
              Select your favourite food
            </option>
            <option
              value="pizza"
            >
              Pizza
            </option>
            <option
              value="pasta"
            >
              Pasta
            </option>
            <option
              value="salad"
            >
              Salad
            </option>
            <option
              value="steak"
            >
              Steak
            </option>
          </select>
          <div
            className="Select__Accessory-h7v5lq-1 eThkKw"
          >
            <svg
              className="Select__Chevron-h7v5lq-2 eVUACE"
              fill="none"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="3"
              viewBox="0 0 24 24"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Validation 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Flex-s1lmmxu5-1 dNIKNy"
  >
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <div
        className="Select__Container-h7v5lq-0 gQNkxp"
        disabled={undefined}
      >
        <select
          className="Select__Control-h7v5lq-3 jlQFOG"
        >
          <option
            value=""
          >
            Select your favourite super hero
          </option>
          <option
            value="wonder-woman"
          >
            Wonder woman
          </option>
          <option
            value="batman"
          >
            Batman
          </option>
          <option
            value="superman"
          >
            Superman
          </option>
          <option
            value="iron-man"
          >
            Iron man
          </option>
        </select>
        <div
          className="Select__Accessory-h7v5lq-1 eThkKw"
        >
          <svg
            className="Select__Chevron-h7v5lq-2 eVUACE"
            fill="none"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="3"
            viewBox="0 0 24 24"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <div
        className="Select__Container-h7v5lq-0 itlJgQ"
        disabled={undefined}
      >
        <select
          className="Select__Control-h7v5lq-3 jlQFOG"
        >
          <option
            value=""
          >
            Select your favourite super hero
          </option>
          <option
            value="wonder-woman"
          >
            Wonder woman
          </option>
          <option
            value="batman"
          >
            Batman
          </option>
          <option
            value="superman"
          >
            Superman
          </option>
          <option
            value="iron-man"
          >
            Iron man
          </option>
        </select>
        <div
          className="Select__Accessory-h7v5lq-1 eThkKw"
        >
          <svg
            className="Select__Chevron-h7v5lq-2 eVUACE"
            fill="none"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="3"
            viewBox="0 0 24 24"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="Flex__Item-s1lmmxu5-0 jFTHiw"
    >
      <div
        className="Select__Container-h7v5lq-0 jFjDFy"
        disabled={true}
      >
        <select
          className="Select__Control-h7v5lq-3 jlQFOG"
          disabled={true}
        >
          <option
            value=""
          >
            Invalid but disabled so no color
          </option>
          <option
            value="wonder-woman"
          >
            Wonder woman
          </option>
          <option
            value="batman"
          >
            Batman
          </option>
          <option
            value="superman"
          >
            Superman
          </option>
          <option
            value="iron-man"
          >
            Iron man
          </option>
        </select>
        <div
          className="Select__Accessory-h7v5lq-1 eThkKw"
        >
          <svg
            className="Select__Chevron-h7v5lq-2 eVUACE"
            fill="none"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="3"
            viewBox="0 0 24 24"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Switch Checkboxes 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Box-s1k20wdx-0 gmYpKW"
  >
    <p
      className="Paragraph-s1qmbsem-0 hiwcSy"
      spacing="smallest"
    >
      Switch can be used as checkboxes with 
      <code>
        type="checkbox"
      </code>
    </p>
    <div
      className="Field-w8gztl-0 dOdphz"
    >
      <div
        className="Switch__Container-s12shb1n-3 erjjhL"
      >
        <input
          className="Switch__Control-s12shb1n-2 UqEMw"
          id="example"
          name="check1"
          type="checkbox"
        />
        <label
          className="Switch__Label-s12shb1n-1 MBuRg"
        >
          <div
            className="Switch__Status-s12shb1n-0 lmYiEf"
          />
          <div
            className="Switch__Content-s12shb1n-4 cQtReC"
          >
            This can be toggled
          </div>
        </label>
      </div>
    </div>
    <div
      className="Field-w8gztl-0 dOdphz"
    >
      <div
        className="Switch__Container-s12shb1n-3 erjjhL"
      >
        <input
          className="Switch__Control-s12shb1n-2 UqEMw"
          id="example2"
          name="check1"
          type="checkbox"
        />
        <label
          className="Switch__Label-s12shb1n-1 MBuRg"
        >
          <div
            className="Switch__Status-s12shb1n-0 lmYiEf"
          />
          <div
            className="Switch__Content-s12shb1n-4 cQtReC"
          >
            So can this one
          </div>
        </label>
      </div>
    </div>
    <div
      className="Field-w8gztl-0 jNJaXY"
    >
      <div
        className="Switch__Container-s12shb1n-3 erjjhL"
      >
        <input
          className="Switch__Control-s12shb1n-2 UqEMw"
          disabled={true}
          id="example3"
          name="check1"
          type="checkbox"
        />
        <label
          className="Switch__Label-s12shb1n-1 MBuRg"
        >
          <div
            className="Switch__Status-s12shb1n-0 lmYiEf"
          />
          <div
            className="Switch__Content-s12shb1n-4 cQtReC"
          >
            But this one is disabled
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Switch Radios 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Box-s1k20wdx-0 gmYpKW"
  >
    <p
      className="Paragraph-s1qmbsem-0 hiwcSy"
      spacing="smallest"
    >
      Switch can be used as radios with 
      <code>
        type="radios"
      </code>
    </p>
    <div
      className="Field-w8gztl-0 dOdphz"
    >
      <div
        className="Switch__Container-s12shb1n-3 erjjhL"
      >
        <input
          className="Switch__Control-s12shb1n-2 UqEMw"
          id="example4"
          name="radio1"
          type="radio"
        />
        <label
          className="Switch__Label-s12shb1n-1 MBuRg"
        >
          <div
            className="Switch__Status-s12shb1n-0 lmYiEf"
          />
          <div
            className="Switch__Content-s12shb1n-4 cQtReC"
          >
            This can be selected
          </div>
        </label>
      </div>
    </div>
    <div
      className="Field-w8gztl-0 dOdphz"
    >
      <div
        className="Switch__Container-s12shb1n-3 erjjhL"
      >
        <input
          className="Switch__Control-s12shb1n-2 UqEMw"
          id="example5"
          name="radio1"
          type="radio"
        />
        <label
          className="Switch__Label-s12shb1n-1 MBuRg"
        >
          <div
            className="Switch__Status-s12shb1n-0 lmYiEf"
          />
          <div
            className="Switch__Content-s12shb1n-4 cQtReC"
          >
            So can this one
          </div>
        </label>
      </div>
    </div>
    <div
      className="Field-w8gztl-0 dOdphz"
    >
      <div
        className="Switch__Container-s12shb1n-3 erjjhL"
      >
        <input
          className="Switch__Control-s12shb1n-2 UqEMw"
          disabled={true}
          id="example6"
          name="radio1"
          type="radio"
        />
        <label
          className="Switch__Label-s12shb1n-1 MBuRg"
        >
          <div
            className="Switch__Status-s12shb1n-0 lmYiEf"
          />
          <div
            className="Switch__Content-s12shb1n-4 cQtReC"
          >
            But this one is disabled
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SystemFontStack Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="SystemFontStack-s1ry2lqk-0 lcrENz"
  >
    This text should be rendered using your system font
  </div>
</div>
`;

exports[`Storyshots Text Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <span
      className="Text-s14udbl0-0 fEefOv"
    >
      Basic example
    </span>
    <br />
    <span
      className="Text-s14udbl0-0 caTMLn"
      color="primary"
    >
      Basic example (primary)
    </span>
    <br />
    <span
      className="Text-s14udbl0-0 elFyqG"
      color="secondary"
    >
      Basic example (secondary)
    </span>
    <br />
    <span
      className="Text-s14udbl0-0 dPbJXX"
      color="success"
    >
      Basic example (success)
    </span>
    <br />
    <span
      className="Text-s14udbl0-0 faOBeQ"
      color="danger"
    >
      Basic example (danger)
    </span>
    <br />
    <span
      className="Text-s14udbl0-0 kSJujU"
      color="muted"
    >
      Basic example (muted)
    </span>
  </div>
</div>
`;

exports[`Storyshots Text Weights 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <span
      className="Text-s14udbl0-0 fsUGAH"
    >
      Basic example
    </span>
    <br />
    <span
      className="Text-s14udbl0-0 cjdsFr"
    >
      Basic example
    </span>
    <br />
    <br />
    <span
      className="Text-s14udbl0-0 eQwzEW"
      color="primary"
    >
      Basic example (primary)
    </span>
    <br />
    <span
      className="Text-s14udbl0-0 eVzHnO"
      color="primary"
    >
      Basic example (primary)
    </span>
    <br />
    <br />
    <span
      className="Text-s14udbl0-0 omMWE"
      color="secondary"
    >
      Basic example (secondary)
    </span>
    <br />
    <span
      className="Text-s14udbl0-0 icuQXv"
      color="secondary"
    >
      Basic example (secondary)
    </span>
    <br />
    <br />
    <span
      className="Text-s14udbl0-0 DPJJD"
      color="success"
    >
      Basic example (success)
    </span>
    <br />
    <span
      className="Text-s14udbl0-0 fZtAUk"
      color="success"
    >
      Basic example (success)
    </span>
    <br />
    <br />
    <span
      className="Text-s14udbl0-0 ipgdPB"
      color="danger"
    >
      Basic example (danger)
    </span>
    <br />
    <span
      className="Text-s14udbl0-0 fXlBTO"
      color="danger"
    >
      Basic example (danger)
    </span>
    <br />
    <br />
    <span
      className="Text-s14udbl0-0 gSrlBb"
      color="muted"
    >
      Basic example (muted)
    </span>
    <br />
    <span
      className="Text-s14udbl0-0 eRwcuD"
      color="muted"
    >
      Basic example (muted)
    </span>
  </div>
</div>
`;
